--- a/views/top/top.ejs
+++ b/views/top/top.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <body>
-<div class="layui-header header header-doc">
-        <div class="layui-form layui-hide-xs component" lay-filter="LAY-site-header-component"></div>
-        <div class="layui-hide-xs notice"></div>
-        <ul class="layui-nav" lay-filter="" style="text-align: right">
-            <li class="layui-nav-item" style="text-align: center"><a id="login_status" href=""></a></li>
+<div class="layui-header header header-doc layui-row">
+    <div class="layui-col-md4 layui-bg-black">
+        <ul class="layui-nav" lay-filter="" style="border-radius: 0">
+            <li class="layui-nav-item" style="text-align: center"><a id="123" href=""><img src="/images/favicon.ico" alt="" style="height: 32px"></a></li>
         </ul>
+    </div>
+    <div class="layui-col-md8">
+        <ul class="layui-nav" lay-filter="" style="text-align: right; border-radius: 0">
+            <li class="layui-nav-item" style="text-align: left"><a id="login_status" href=""></a></li>
+        </ul>
+    </div>
 </div>
 </body>
 <script>
