--- a/views/top/top.ejs
+++ b/views/top/top.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <body>
 <div class="layui-header header header-doc layui-row">
-    <div class="layui-col-md4 layui-bg-black">
+    <div class="layui-col-xs4 layui-bg-black">
         <ul class="layui-nav" lay-filter="" style="border-radius: 0">
             <li class="layui-nav-item" style="text-align: center"><a id="123" href=""><img src="/images/favicon.ico" alt="" style="height: 32px"></a></li>
         </ul>
     </div>
-    <div class="layui-col-md8">
+    <div class="layui-col-xs8">
         <ul class="layui-nav" lay-filter="" style="text-align: right; border-radius: 0">
             <li class="layui-nav-item" style="text-align: left"><a id="login_status" href=""></a></li>
         </ul>
