--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <!-- 引入 layui.css -->
-    <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
-    <!-- 引入 layui.js -->
-    <script src="//unpkg.com/layui@2.6.8/dist/layui.js"></script>
+    <link rel="stylesheet" href="https://www.layuicdn.com/layui/css/layui.css">
+    <script src="https://www.layuicdn.com/layui/layui.js"></script>
     <meta charset="UTF-8">
     <title>防骚扰-管理员登录</title>
 </head>
@@ -31,7 +29,7 @@
                             </label>
                         </div>
                         <div>
-                            <h6 id="pwd_waring" style="margin-left: 130px;margin-top: 5px;color: crimson" hidden><i class="layui-icon"></i>&#10006; ID或密码错误</h6>
+                            <h6 id="pwd_waring" style="margin-left: 130px;margin-top: 5px;color: crimson" hidden>&#10006; ID或密码错误</h6>
                         </div>
                     </div>
                     <div class="layui-form-item" style="margin-top: 50px">
