--- a/views/baseModelConfig.ejs
+++ b/views/baseModelConfig.ejs
@@ -4,7 +4,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
     <script src="//unpkg.com/layui@2.6.8/dist/layui.js"></script>
-    <title>防骚扰-模型设置</title>
+    <title>防骚扰-基础模型设置</title>
 </head>
 <body>
 <% include top/top.ejs%>
@@ -20,7 +20,7 @@
             <tr>
                 <th style="font-weight: bold">指标</th>
                 <th style="font-weight: bold">权重</th>
-                <th style="font-weight: bold">值</th>
+                <th style="font-weight: bold">基准值</th>
             </tr>
             </thead>
             <tbody>
@@ -34,7 +34,7 @@
                     </label></td>
             </tr>
             <tr>
-                <td>当天拨打同一被叫重大重复次数</td>
+                <td>当天拨打同一被叫重复次数</td>
                 <td><label>
                         <input id="b1" name="w_callFromSameNumToday" type="text" class="layui-input" value="1" disabled>
                     </label></td>
@@ -92,7 +92,7 @@
     let $ = layui.jquery;
     $.ajax({
       type: "get",
-      url: "http://localhost:8080/config/getBaseModel",
+      url: "http://<%= server_host %>/model/getBaseModel",
       headers: {token: localStorage.getItem('token')},
       success: function (res) {
         if (res.code === 200) {
@@ -123,7 +123,7 @@
       let post_info = {config: data.field}
       $.ajax({
         type: "post",
-        url: "http://localhost:8080/config/setBaseModel",
+        url: "http://<%= server_host %>/model/setBaseModel",
         data: JSON.stringify(post_info),
         headers: {token: localStorage.getItem('token')},
         contentType: "application/json; charset=utf-8",
