--- a/views/success.ejs
+++ b/views/success.ejs
@@ -16,6 +16,7 @@
     <button type="button" class="layui-btn layui-btn-radius" id="token_test_btn">token测试</button>
     <button type="button" class="layui-btn layui-btn-radius" id="get_test_btn">get测试</button>
     <button type="button" class="layui-btn layui-btn-radius" id="config_btn">模型设置</button>
+    <button type="button" class="layui-btn layui-btn-radius" id="sim_call_btn">模拟拨打</button>
     <p id="token_result"></p>
     <p id="get_result"></p>
 </div>
@@ -28,7 +29,7 @@
     $('#token_test_btn').on('click', function() {
       $.ajax({
         type: 'get',
-        url: 'http://localhost:8080/test/tokenTest',
+        url: 'http://<%= server %>/test/tokenTest',
         headers: {token: localStorage.getItem('token')},
         dataType: 'json',
         success: function(res) {
@@ -43,7 +44,7 @@
     $('#get_test_btn').on('click', function() {
       $.ajax({
         type: 'get',
-        url: 'http://localhost:8080/test/getTest?s1=hello',
+        url: 'http://<%= server %>/test/getTest?s1=hello',
         headers: {token: localStorage.getItem('token')},
         dataType: 'json',
         success: function(res) {
@@ -57,7 +58,21 @@
       });
     });
     $('#config_btn').on('click', function() {
-      window.location.href='/config'
+      window.location.href='/base_config'
+    })
+    $('#sim_call_btn').on('click', function() {
+      $.ajax({
+        type: 'get',
+        url: 'http://<%= server %>/simulator/phoneCall',
+        headers: {token: localStorage.getItem('token')},
+        success: function(res) {
+          if (res.code === 200) {
+            $('#token_result').html(res.data);
+          } else {
+            console.log(res);
+          }
+        },
+      });
     })
   });
 </script>
