--- a/views/top/top.ejs
+++ b/views/top/top.ejs
@@ -3,7 +3,9 @@
 <div class="layui-header header header-doc layui-row">
     <div class="layui-col-xs4 layui-bg-black">
         <ul class="layui-nav" lay-filter="" style="border-radius: 0">
-            <li class="layui-nav-item" style="text-align: center"><a id="123" href=""><img src="/images/favicon.ico" alt="" style="height: 32px"></a></li>
+            <li class="layui-nav-item" style="text-align: center"><a id="123" href=""><img src="/images/favicon.ico"
+                                                                                           alt="" style="height: 32px"></a>
+            </li>
         </ul>
     </div>
     <div class="layui-col-xs8">
@@ -13,7 +15,9 @@
                 <dl class="layui-nav-child" style="text-align: center"> <!-- 二级菜单 -->
                     <dd><a href="/base_config">基础模型设置</a></dd>
                     <dd><a href="">后台模版</a></dd>
-                    <dd><div style="background-color: black"></div></dd>
+                    <dd>
+                        <div style="background-color: black"></div>
+                    </dd>
                     <dd><a id="logout_btn" href="">注销</a></dd>
                 </dl>
             </li>
@@ -31,7 +35,7 @@
             }
         } else {
             $('#username')
-                .html(localStorage.getItem('nickname')+'<i class="layui-icon layui-icon-down layui-nav-more"/>')
+                .html(localStorage.getItem('nickname') + '<i class="layui-icon layui-icon-down layui-nav-more"/>')
         }
 
         $('#logout_btn').on('click', function () {
