--- a/views/top/top.ejs
+++ b/views/top/top.ejs
@@ -14,10 +14,9 @@
                 <a id="username" href=""></a>
                 <dl class="layui-nav-child" style="text-align: center"> <!-- 二级菜单 -->
                     <dd><a href="/base_config">基础模型设置</a></dd>
-                    <dd><a href="">后台模版</a></dd>
-                    <dd>
-                        <div style="background-color: black"></div>
-                    </dd>
+                    <dd><a href="/details">模拟监控信息</a></dd>
+                    <dd><a href="/success">模拟拨打</a></dd>
+                    <hr>
                     <dd><a id="logout_btn" href="">注销</a></dd>
                 </dl>
             </li>
