--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,138 +9,8 @@
 <body>
 <% include top/top.ejs %>
 <div class="layui-container">
-    <div class="layui-row">
-        <form class="layui-form" action="">
-            <table class="layui-table" style="width: 800px; margin-left: 50px; margin-right: 50px; margin-top: 50px">
-
-                <thead>
-                <tr>
-                    <th style="font-weight: bold">指标</th>
-                    <th style="font-weight: bold">基准值</th>
-                    <th style="font-weight: bold">当前值</th>
-                    <th style="color: red; font-weight: bold">拦截次数</th>
-                </tr>
-                </thead>
-                <tbody>
-                <td>当天呼叫次数 <br> (测试主叫 -> 测试被叫)</td>
-                <td>
-                    <label style="font-weight: bold" id="a1">...</label>
-                </td>
-                <td>
-                    <label style="font-weight: bold" id="a2">...</label>
-                </td>
-                <td style="color: red; font-weight: bold" id="a3">
-                    1
-                </td>
-                </tbody>
-            </table>
-        </form>
-    </div>
-    <div id="refresh_icon" style="display: none; margin-left: 60px">
-        <i class="layui-icon layui-icon-loading-1 layui-anim layui-anim-rotate layui-anim-loop"></i>
-        自动刷新中...
-    </div>
-    <div id="resume_icon" style="margin-left: 60px">
-        <i class="layui-icon layui-icon-pause"></i>
-        未开启自动刷新。
-    </div>
-    <div class="layui-row" style="text-align: center">
-        <button class="layui-btn layui-btn-radius" id="start">
-            <i class="layui-icon layui-icon-refresh-1"></i> 自动刷新
-        </button>
-        <button class="layui-btn layui-btn-radius layui-btn-danger" id="resume">
-            <i class="layui-icon layui-icon-pause"></i> 暂停刷新
-        </button>
-    </div>
-    <div class="layui-row">
-        <div class="layui-col-md6" style="width: 300px;  margin-left: 60px; margin-right: 50px; margin-top: 30px">
-            <div class="layui-row" style="font-weight: bold"><h3>黑名单</h3></div>
-            <div class="layui-row" style="max-height: 500px; overflow: auto; margin-top: 10px">
-                <table id="blackList" class="layui-table">
-                </table>
-            </div>
-        </div>
-        <div class="layui-col-md6" style="width: 300px;  margin-left: 60px; margin-right: 50px; margin-top: 30px">
-            <div class="layui-row" style="font-weight: bold"><h3>白名单</h3></div>
-            <div class="layui-row" style="max-height: 500px; overflow: auto; margin-top: 10px">
-                <table id="whiteList" class="layui-table">
-                </table>
-            </div>
-        </div>
-    </div>
+    <% include details/baseModelDetails.ejs %>
+    <% include bwList/black_white_list.ejs %>
 </div>
-
 </body>
-<script>
-    layui.use(function () {
-        let $ = layui.jquery;
-        let anti_cnt, std_anti_cnt, call_cnt;
-        let interval;
-        let getCallCount = function () {
-            $.ajax({
-                type: 'get',
-                url: "http://<%= server_host %>/model/getCallCountToday?from=15700083072&to=18996478090",
-                headers: {token: localStorage.getItem('token')},
-                success: function (res) {
-                    if (res.code === 200) {
-                        call_cnt = res.data;
-                        anti_cnt = call_cnt - std_anti_cnt >= 0 ? call_cnt - std_anti_cnt : 0
-                        $('#a2').html(call_cnt);
-                        $('#a3').html(anti_cnt)
-                    }
-                },
-            });
-        }
-        $.ajax({
-            type: 'get',
-            url: "http://<%= server_host %>/model/getBaseModel",
-            headers: {token: localStorage.getItem('token')},
-            success: function (res) {
-                if (res.code === 200) {
-                    std_anti_cnt = res.data.config['callFromSameNumToday']
-                    $('#a1').html(std_anti_cnt);
-                }
-            },
-        });
-        $.ajax({
-            type: 'get',
-            url: "http://<%= server_host %>/simulator/getBlackList?num=18996478090",
-            headers: {token: localStorage.getItem('token')},
-            success: function (res) {
-                if (res.code === 200) {
-                    console.log(res.data)
-                    for (let key in res.data) {
-                        $('#blackList').append('<tr><td>' + res.data[key] + '</td></tr>')
-                    }
-                }
-            },
-        });
-        $.ajax({
-            type: 'get',
-            url: "http://<%= server_host %>/simulator/getWhiteList?num=18996478090",
-            headers: {token: localStorage.getItem('token')},
-            success: function (res) {
-                if (res.code === 200) {
-                    if (res.code === 200) {
-                        console.log(res.data)
-                        for (let key in res.data) {
-                            $('#whiteList').append('<tr><td>' + res.data[key] + '</td></tr>')
-                        }
-                    }
-                }
-            },
-        });
-        $('#start').on("click", function () {
-            interval = window.setInterval(getCallCount, 1000)
-            $('#refresh_icon').show()
-            $('#resume_icon').hide()
-        })
-        $('#resume').on("click", function () {
-            window.clearInterval(interval)
-            $('#refresh_icon').hide()
-            $('#resume_icon').show()
-        })
-    });
-
-</script>
 </html>
